--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -3,24 +3,9 @@
 
 <div class="row">
   <div class="col">
-    <h3>Personajes</h3>
-    <hr />
-    <ul>
-      <li>Krilin - 700</li>
-      <li>Goku - 15,000</li>
-      <li>Veguete - 8,500</li>
-    </ul>
+    <app-personajes></app-personajes>
   </div>
   <div class="col">
-    <h3>Agregar</h3>
-    <hr />
-
-    <form (ngSubmit)="agregar()">
-      <!-- this is what happens behinf ngModel -->
-      <!-- <input type="text" placeholder="Nombre" [value]="nuevo.nombre" (input)="cambiarNombre( $event )" /> -->
-      <input type="text" placeholder="Nombre" name="nombre" [(ngModel)]="nuevo.nombre"/>
-      <input type="text" placeholder="Poder" [value]="nuevo.poder" name="poder" [(ngModel)]="nuevo.poder" />
-      <button type="submit">Agregar</button>
-    </form>
+    <app-agregar [nuevo]="nuevo"></app-agregar>
   </div>
 </div>
